// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptionFieldKeyValue has a helptext 1`] = `
<div>
  <div
    class="panel panel-secondary"
  >
    <button
      aria-controls="clay-id-1"
      aria-expanded="false"
      class="panel-header panel-header-link collapsable-option-header collapse-icon collapse-icon-middle collapsed btn btn-unstyled"
      type="button"
    >
      <span
        class="panel-title"
      >
        Option
      </span>
      <span
        class="collapse-icon-closed"
      >
        <svg
          class="lexicon-icon lexicon-icon-angle-right"
          role="presentation"
        >
          <use
            href="#angle-right"
          />
        </svg>
      </span>
      <span
        class="collapse-icon-open"
      >
        <svg
          class="lexicon-icon lexicon-icon-angle-down"
          role="presentation"
        >
          <use
            href="#angle-down"
          />
        </svg>
      </span>
    </button>
    <div
      aria-labelledby="clay-id-1"
      class="panel-collapse collapse"
      id="clay-id-1"
      role="region"
    >
      <div
        class="panel-body collapsable-option-body"
      >
        <label
          for="keyValueDisplayNameOptionFieldKeyValue"
        >
          display-name
        </label>
        <div
          aria-labelledby="OptionFieldKeyValue_fieldDetails"
          class="form-group hide"
          data-field-name="OptionFieldKeyValue"
        >
          <div
            class="form-group hide"
            data-field-name="keyValueDisplayNameOptionFieldKeyValue"
          >
            <div
              data-tooltip-align="top"
            >
              <input
                class="form-control ddm-field-text"
                id="keyValueDisplayNameOptionFieldKeyValue"
                name="keyValueDisplayNameOptionFieldKeyValue"
                type="text"
                value=""
              />
            </div>
            <input
              name="keyValueDisplayNameOptionFieldKeyValue_edited"
              type="hidden"
              value="false"
            />
            <div
              class="form-feedback-group field-feedback"
              id="keyValueDisplayNameOptionFieldKeyValue_fieldFeedback"
            >
              <div
                aria-live="assertive"
                class="form-feedback-item"
              />
            </div>
          </div>
          <input
            name="OptionFieldKeyValue_edited"
            type="hidden"
            value="false"
          />
          <div
            class="form-feedback-group field-feedback"
            id="OptionFieldKeyValue_fieldFeedback"
          >
            <div
              aria-live="assertive"
              class="form-feedback-item"
            />
            <div>
              Type something
            </div>
          </div>
          <span
            class="sr-only"
            id="OptionFieldKeyValue_fieldDetails"
          >
            Type something
          </span>
        </div>
        <label
          class="mt-3"
          for="keyValueReferenceundefined"
        >
          option-reference
        </label>
        <div
          aria-labelledby="undefined_fieldDetails"
          class="form-group hide"
        >
          <div
            class="form-group hide"
            data-field-name="keyValueReferenceundefined"
          >
            <div
              data-tooltip-align="top"
            >
              <input
                class="form-control ddm-field-text"
                id="keyValueReferenceundefined"
                name="keyValueReferenceundefined"
                type="text"
                value=""
              />
            </div>
            <input
              name="keyValueReferenceundefined_edited"
              type="hidden"
              value="false"
            />
            <div
              class="form-feedback-group field-feedback"
              id="keyValueReferenceundefined_fieldFeedback"
            >
              <div
                aria-live="assertive"
                class="form-feedback-item"
              />
            </div>
          </div>
          <input
            name="undefined_edited"
            type="hidden"
            value="false"
          />
          <div
            class="form-feedback-group field-feedback"
            id="undefined_fieldFeedback"
          >
            <div
              aria-live="assertive"
              class="form-feedback-item"
            />
            <div>
              Type something
            </div>
          </div>
          <span
            class="sr-only"
            id="undefined_fieldDetails"
          >
            Type something
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`OptionFieldKeyValue has a label 1`] = `
<div>
  <div
    class="panel panel-secondary"
  >
    <button
      aria-controls="clay-id-2"
      aria-expanded="false"
      class="panel-header panel-header-link collapsable-option-header collapse-icon collapse-icon-middle collapsed btn btn-unstyled"
      type="button"
    >
      <span
        class="panel-title"
      >
        Option
      </span>
      <span
        class="collapse-icon-closed"
      >
        <svg
          class="lexicon-icon lexicon-icon-angle-right"
          role="presentation"
        >
          <use
            href="#angle-right"
          />
        </svg>
      </span>
      <span
        class="collapse-icon-open"
      >
        <svg
          class="lexicon-icon lexicon-icon-angle-down"
          role="presentation"
        >
          <use
            href="#angle-down"
          />
        </svg>
      </span>
    </button>
    <div
      aria-labelledby="clay-id-2"
      class="panel-collapse collapse"
      id="clay-id-2"
      role="region"
    >
      <div
        class="panel-body collapsable-option-body"
      >
        <label
          for="keyValueDisplayNameOptionFieldKeyValue"
        >
          display-name
        </label>
        <div
          class="form-group hide"
          data-field-name="OptionFieldKeyValue"
        >
          <label
            aria-labelledby="OptionFieldKeyValue_fieldDetails"
            class="ddm-label"
          >
            label
          </label>
          <div
            class="form-group hide"
            data-field-name="keyValueDisplayNameOptionFieldKeyValue"
          >
            <div
              data-tooltip-align="top"
            >
              <input
                class="form-control ddm-field-text"
                id="keyValueDisplayNameOptionFieldKeyValue"
                name="keyValueDisplayNameOptionFieldKeyValue"
                type="text"
                value=""
              />
            </div>
            <input
              name="keyValueDisplayNameOptionFieldKeyValue_edited"
              type="hidden"
              value="false"
            />
            <div
              class="form-feedback-group field-feedback"
              id="keyValueDisplayNameOptionFieldKeyValue_fieldFeedback"
            >
              <div
                aria-live="assertive"
                class="form-feedback-item"
              />
            </div>
          </div>
          <input
            name="OptionFieldKeyValue_edited"
            type="hidden"
            value="false"
          />
          <div
            class="form-feedback-group field-feedback"
            id="OptionFieldKeyValue_fieldFeedback"
          >
            <div
              aria-live="assertive"
              class="form-feedback-item"
            />
          </div>
          <span
            class="sr-only"
            id="OptionFieldKeyValue_fieldDetails"
          >
            label
          </span>
        </div>
        <label
          class="mt-3"
          for="keyValueReferenceundefined"
        >
          option-reference
        </label>
        <div
          class="form-group hide"
        >
          <label
            aria-labelledby="undefined_fieldDetails"
            class="ddm-label"
          >
            label
          </label>
          <div
            class="form-group hide"
            data-field-name="keyValueReferenceundefined"
          >
            <div
              data-tooltip-align="top"
            >
              <input
                class="form-control ddm-field-text"
                id="keyValueReferenceundefined"
                name="keyValueReferenceundefined"
                type="text"
                value=""
              />
            </div>
            <input
              name="keyValueReferenceundefined_edited"
              type="hidden"
              value="false"
            />
            <div
              class="form-feedback-group field-feedback"
              id="keyValueReferenceundefined_fieldFeedback"
            >
              <div
                aria-live="assertive"
                class="form-feedback-item"
              />
            </div>
          </div>
          <input
            name="undefined_edited"
            type="hidden"
            value="false"
          />
          <div
            class="form-feedback-group field-feedback"
            id="undefined_fieldFeedback"
          >
            <div
              aria-live="assertive"
              class="form-feedback-item"
            />
          </div>
          <span
            class="sr-only"
            id="undefined_fieldDetails"
          >
            label
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`OptionFieldKeyValue has a predefined Value 1`] = `
<div>
  <div
    class="panel panel-secondary"
  >
    <button
      aria-controls="clay-id-3"
      aria-expanded="false"
      class="panel-header panel-header-link collapsable-option-header collapse-icon collapse-icon-middle collapsed btn btn-unstyled"
      type="button"
    >
      <span
        class="panel-title"
      >
        Option
      </span>
      <span
        class="collapse-icon-closed"
      >
        <svg
          class="lexicon-icon lexicon-icon-angle-right"
          role="presentation"
        >
          <use
            href="#angle-right"
          />
        </svg>
      </span>
      <span
        class="collapse-icon-open"
      >
        <svg
          class="lexicon-icon lexicon-icon-angle-down"
          role="presentation"
        >
          <use
            href="#angle-down"
          />
        </svg>
      </span>
    </button>
    <div
      aria-labelledby="clay-id-3"
      class="panel-collapse collapse"
      id="clay-id-3"
      role="region"
    >
      <div
        class="panel-body collapsable-option-body"
      >
        <label
          for="keyValueDisplayNameOptionFieldKeyValue"
        >
          display-name
        </label>
        <div
          class="form-group hide"
          data-field-name="OptionFieldKeyValue"
        >
          <div
            class="form-group hide"
            data-field-name="keyValueDisplayNameOptionFieldKeyValue"
          >
            <div
              data-tooltip-align="top"
              title="Option 1"
            >
              <input
                class="form-control ddm-field-text"
                id="keyValueDisplayNameOptionFieldKeyValue"
                name="keyValueDisplayNameOptionFieldKeyValue"
                placeholder="Option 1"
                type="text"
                value=""
              />
            </div>
            <input
              name="keyValueDisplayNameOptionFieldKeyValue_edited"
              type="hidden"
              value="false"
            />
            <div
              class="form-feedback-group field-feedback"
              id="keyValueDisplayNameOptionFieldKeyValue_fieldFeedback"
            >
              <div
                aria-live="assertive"
                class="form-feedback-item"
              />
            </div>
          </div>
          <input
            name="OptionFieldKeyValue_edited"
            type="hidden"
            value="false"
          />
          <div
            class="form-feedback-group field-feedback"
            id="OptionFieldKeyValue_fieldFeedback"
          >
            <div
              aria-live="assertive"
              class="form-feedback-item"
            />
          </div>
        </div>
        <label
          class="mt-3"
          for="keyValueReferenceundefined"
        >
          option-reference
        </label>
        <div
          class="form-group hide"
        >
          <div
            class="form-group hide"
            data-field-name="keyValueReferenceundefined"
          >
            <div
              data-tooltip-align="top"
            >
              <input
                class="form-control ddm-field-text"
                id="keyValueReferenceundefined"
                name="keyValueReferenceundefined"
                type="text"
                value=""
              />
            </div>
            <input
              name="keyValueReferenceundefined_edited"
              type="hidden"
              value="false"
            />
            <div
              class="form-feedback-group field-feedback"
              id="keyValueReferenceundefined_fieldFeedback"
            >
              <div
                aria-live="assertive"
                class="form-feedback-item"
              />
            </div>
          </div>
          <input
            name="undefined_edited"
            type="hidden"
            value="false"
          />
          <div
            class="form-feedback-group field-feedback"
            id="undefined_fieldFeedback"
          >
            <div
              aria-live="assertive"
              class="form-feedback-item"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`OptionFieldKeyValue has a value 1`] = `
<div>
  <div
    class="panel panel-secondary"
  >
    <button
      aria-controls="clay-id-4"
      aria-expanded="false"
      class="panel-header panel-header-link collapsable-option-header collapse-icon collapse-icon-middle collapsed btn btn-unstyled"
      type="button"
    >
      <span
        class="panel-title"
      >
        value
      </span>
      <span
        class="collapse-icon-closed"
      >
        <svg
          class="lexicon-icon lexicon-icon-angle-right"
          role="presentation"
        >
          <use
            href="#angle-right"
          />
        </svg>
      </span>
      <span
        class="collapse-icon-open"
      >
        <svg
          class="lexicon-icon lexicon-icon-angle-down"
          role="presentation"
        >
          <use
            href="#angle-down"
          />
        </svg>
      </span>
    </button>
    <div
      aria-labelledby="clay-id-4"
      class="panel-collapse collapse"
      id="clay-id-4"
      role="region"
    >
      <div
        class="panel-body collapsable-option-body"
      >
        <label
          for="keyValueDisplayNameOptionFieldKeyValue"
        >
          display-name
        </label>
        <div
          class="form-group hide"
          data-field-name="OptionFieldKeyValue"
        >
          <div
            class="form-group hide"
            data-field-name="keyValueDisplayNameOptionFieldKeyValue"
          >
            <div
              data-tooltip-align="top"
              title="value"
            >
              <input
                class="form-control ddm-field-text"
                id="keyValueDisplayNameOptionFieldKeyValue"
                name="keyValueDisplayNameOptionFieldKeyValue"
                type="text"
                value="value"
              />
            </div>
            <input
              name="keyValueDisplayNameOptionFieldKeyValue_edited"
              type="hidden"
              value="false"
            />
            <div
              class="form-feedback-group field-feedback"
              id="keyValueDisplayNameOptionFieldKeyValue_fieldFeedback"
            >
              <div
                aria-live="assertive"
                class="form-feedback-item"
              />
            </div>
          </div>
          <input
            name="OptionFieldKeyValue_edited"
            type="hidden"
            value="false"
          />
          <div
            class="form-feedback-group field-feedback"
            id="OptionFieldKeyValue_fieldFeedback"
          >
            <div
              aria-live="assertive"
              class="form-feedback-item"
            />
          </div>
        </div>
        <label
          class="mt-3"
          for="keyValueReferenceundefined"
        >
          option-reference
        </label>
        <div
          class="form-group hide"
        >
          <div
            class="form-group hide"
            data-field-name="keyValueReferenceundefined"
          >
            <div
              data-tooltip-align="top"
            >
              <input
                class="form-control ddm-field-text"
                id="keyValueReferenceundefined"
                name="keyValueReferenceundefined"
                type="text"
                value=""
              />
            </div>
            <input
              name="keyValueReferenceundefined_edited"
              type="hidden"
              value="false"
            />
            <div
              class="form-feedback-group field-feedback"
              id="keyValueReferenceundefined_fieldFeedback"
            >
              <div
                aria-live="assertive"
                class="form-feedback-item"
              />
            </div>
          </div>
          <input
            name="undefined_edited"
            type="hidden"
            value="false"
          />
          <div
            class="form-feedback-group field-feedback"
            id="undefined_fieldFeedback"
          >
            <div
              aria-live="assertive"
              class="form-feedback-item"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`OptionFieldKeyValue has an id 1`] = `
<div>
  <div
    class="panel panel-secondary"
  >
    <button
      aria-controls="clay-id-5"
      aria-expanded="false"
      class="panel-header panel-header-link collapsable-option-header collapse-icon collapse-icon-middle collapsed btn btn-unstyled"
      type="button"
    >
      <span
        class="panel-title"
      >
        Option
      </span>
      <span
        class="collapse-icon-closed"
      >
        <svg
          class="lexicon-icon lexicon-icon-angle-right"
          role="presentation"
        >
          <use
            href="#angle-right"
          />
        </svg>
      </span>
      <span
        class="collapse-icon-open"
      >
        <svg
          class="lexicon-icon lexicon-icon-angle-down"
          role="presentation"
        >
          <use
            href="#angle-down"
          />
        </svg>
      </span>
    </button>
    <div
      aria-labelledby="clay-id-5"
      class="panel-collapse collapse"
      id="clay-id-5"
      role="region"
    >
      <div
        class="panel-body collapsable-option-body"
      >
        <label
          for="keyValueDisplayNameOptionFieldKeyValue"
        >
          display-name
        </label>
        <div
          class="form-group hide"
          data-field-name="OptionFieldKeyValue"
        >
          <div
            class="form-group hide"
            data-field-name="keyValueDisplayNameOptionFieldKeyValue"
          >
            <div
              data-tooltip-align="top"
            >
              <input
                class="form-control ddm-field-text"
                id="keyValueDisplayNameOptionFieldKeyValue"
                name="keyValueDisplayNameOptionFieldKeyValue"
                type="text"
                value=""
              />
            </div>
            <input
              name="keyValueDisplayNameOptionFieldKeyValue_edited"
              type="hidden"
              value="false"
            />
            <div
              class="form-feedback-group field-feedback"
              id="keyValueDisplayNameOptionFieldKeyValue_fieldFeedback"
            >
              <div
                aria-live="assertive"
                class="form-feedback-item"
              />
            </div>
          </div>
          <input
            name="OptionFieldKeyValue_edited"
            type="hidden"
            value="false"
          />
          <div
            class="form-feedback-group field-feedback"
            id="Id_fieldFeedback"
          >
            <div
              aria-live="assertive"
              class="form-feedback-item"
            />
          </div>
        </div>
        <label
          class="mt-3"
          for="keyValueReferenceundefined"
        >
          option-reference
        </label>
        <div
          class="form-group hide"
        >
          <div
            class="form-group hide"
            data-field-name="keyValueReferenceundefined"
          >
            <div
              data-tooltip-align="top"
            >
              <input
                class="form-control ddm-field-text"
                id="keyValueReferenceundefined"
                name="keyValueReferenceundefined"
                type="text"
                value=""
              />
            </div>
            <input
              name="keyValueReferenceundefined_edited"
              type="hidden"
              value="false"
            />
            <div
              class="form-feedback-group field-feedback"
              id="keyValueReferenceundefined_fieldFeedback"
            >
              <div
                aria-live="assertive"
                class="form-feedback-item"
              />
            </div>
          </div>
          <input
            name="undefined_edited"
            type="hidden"
            value="false"
          />
          <div
            class="form-feedback-group field-feedback"
            id="Id_fieldFeedback"
          >
            <div
              aria-live="assertive"
              class="form-feedback-item"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`OptionFieldKeyValue is not editable 1`] = `
<div>
  <div
    class="panel panel-secondary"
  >
    <button
      aria-controls="clay-id-7"
      aria-expanded="false"
      class="panel-header panel-header-link collapsable-option-header collapse-icon collapse-icon-middle collapsed btn btn-unstyled"
      type="button"
    >
      <span
        class="panel-title"
      >
        Option
      </span>
      <span
        class="collapse-icon-closed"
      >
        <svg
          class="lexicon-icon lexicon-icon-angle-right"
          role="presentation"
        >
          <use
            href="#angle-right"
          />
        </svg>
      </span>
      <span
        class="collapse-icon-open"
      >
        <svg
          class="lexicon-icon lexicon-icon-angle-down"
          role="presentation"
        >
          <use
            href="#angle-down"
          />
        </svg>
      </span>
    </button>
    <div
      aria-labelledby="clay-id-7"
      class="panel-collapse collapse"
      id="clay-id-7"
      role="region"
    >
      <div
        class="panel-body collapsable-option-body"
      >
        <label
          for="keyValueDisplayNameOptionFieldKeyValue"
        >
          display-name
        </label>
        <div
          class="form-group hide"
          data-field-name="OptionFieldKeyValue"
        >
          <div
            class="form-group hide"
            data-field-name="keyValueDisplayNameOptionFieldKeyValue"
          >
            <div
              data-tooltip-align="top"
            >
              <input
                class="form-control ddm-field-text"
                disabled=""
                id="keyValueDisplayNameOptionFieldKeyValue"
                name="keyValueDisplayNameOptionFieldKeyValue"
                type="text"
                value=""
              />
            </div>
            <input
              name="keyValueDisplayNameOptionFieldKeyValue_edited"
              type="hidden"
              value="false"
            />
            <div
              class="form-feedback-group field-feedback"
              id="keyValueDisplayNameOptionFieldKeyValue_fieldFeedback"
            >
              <div
                aria-live="assertive"
                class="form-feedback-item"
              />
            </div>
          </div>
          <input
            name="OptionFieldKeyValue_edited"
            type="hidden"
            value="false"
          />
          <div
            class="form-feedback-group field-feedback"
            id="OptionFieldKeyValue_fieldFeedback"
          >
            <div
              aria-live="assertive"
              class="form-feedback-item"
            />
          </div>
        </div>
        <label
          class="mt-3"
          for="keyValueReferenceundefined"
        >
          option-reference
        </label>
        <div
          class="form-group hide"
        >
          <div
            class="form-group hide"
            data-field-name="keyValueReferenceundefined"
          >
            <div
              data-tooltip-align="top"
            >
              <input
                class="form-control ddm-field-text"
                id="keyValueReferenceundefined"
                name="keyValueReferenceundefined"
                type="text"
                value=""
              />
            </div>
            <input
              name="keyValueReferenceundefined_edited"
              type="hidden"
              value="false"
            />
            <div
              class="form-feedback-group field-feedback"
              id="keyValueReferenceundefined_fieldFeedback"
            >
              <div
                aria-live="assertive"
                class="form-feedback-item"
              />
            </div>
          </div>
          <input
            name="undefined_edited"
            type="hidden"
            value="false"
          />
          <div
            class="form-feedback-group field-feedback"
            id="undefined_fieldFeedback"
          >
            <div
              aria-live="assertive"
              class="form-feedback-item"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`OptionFieldKeyValue is not required 1`] = `
<div>
  <div
    class="panel panel-secondary"
  >
    <button
      aria-controls="clay-id-8"
      aria-expanded="false"
      class="panel-header panel-header-link collapsable-option-header collapse-icon collapse-icon-middle collapsed btn btn-unstyled"
      type="button"
    >
      <span
        class="panel-title"
      >
        Option
      </span>
      <span
        class="collapse-icon-closed"
      >
        <svg
          class="lexicon-icon lexicon-icon-angle-right"
          role="presentation"
        >
          <use
            href="#angle-right"
          />
        </svg>
      </span>
      <span
        class="collapse-icon-open"
      >
        <svg
          class="lexicon-icon lexicon-icon-angle-down"
          role="presentation"
        >
          <use
            href="#angle-down"
          />
        </svg>
      </span>
    </button>
    <div
      aria-labelledby="clay-id-8"
      class="panel-collapse collapse"
      id="clay-id-8"
      role="region"
    >
      <div
        class="panel-body collapsable-option-body"
      >
        <label
          for="keyValueDisplayNameOptionFieldKeyValue"
        >
          display-name
        </label>
        <div
          class="form-group hide"
          data-field-name="OptionFieldKeyValue"
        >
          <div
            class="form-group hide"
            data-field-name="keyValueDisplayNameOptionFieldKeyValue"
          >
            <div
              data-tooltip-align="top"
            >
              <input
                aria-required="false"
                class="form-control ddm-field-text"
                id="keyValueDisplayNameOptionFieldKeyValue"
                name="keyValueDisplayNameOptionFieldKeyValue"
                type="text"
                value=""
              />
            </div>
            <input
              name="keyValueDisplayNameOptionFieldKeyValue_edited"
              type="hidden"
              value="false"
            />
            <div
              class="form-feedback-group field-feedback"
              id="keyValueDisplayNameOptionFieldKeyValue_fieldFeedback"
            >
              <div
                aria-live="assertive"
                class="form-feedback-item"
              />
            </div>
          </div>
          <input
            name="OptionFieldKeyValue_edited"
            type="hidden"
            value="false"
          />
          <div
            class="form-feedback-group field-feedback"
            id="OptionFieldKeyValue_fieldFeedback"
          >
            <div
              aria-live="assertive"
              class="form-feedback-item"
            />
          </div>
        </div>
        <label
          class="mt-3"
          for="keyValueReferenceundefined"
        >
          option-reference
        </label>
        <div
          class="form-group hide"
        >
          <div
            class="form-group hide"
            data-field-name="keyValueReferenceundefined"
          >
            <div
              data-tooltip-align="top"
            >
              <input
                class="form-control ddm-field-text"
                id="keyValueReferenceundefined"
                name="keyValueReferenceundefined"
                type="text"
                value=""
              />
            </div>
            <input
              name="keyValueReferenceundefined_edited"
              type="hidden"
              value="false"
            />
            <div
              class="form-feedback-group field-feedback"
              id="keyValueReferenceundefined_fieldFeedback"
            >
              <div
                aria-live="assertive"
                class="form-feedback-item"
              />
            </div>
          </div>
          <input
            name="undefined_edited"
            type="hidden"
            value="false"
          />
          <div
            class="form-feedback-group field-feedback"
            id="undefined_fieldFeedback"
          >
            <div
              aria-live="assertive"
              class="form-feedback-item"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`OptionFieldKeyValue renders Label if showLabel is true 1`] = `
<div>
  <div
    class="panel panel-secondary"
  >
    <button
      aria-controls="clay-id-10"
      aria-expanded="false"
      class="panel-header panel-header-link collapsable-option-header collapse-icon collapse-icon-middle collapsed btn btn-unstyled"
      type="button"
    >
      <span
        class="panel-title"
      >
        Option
      </span>
      <span
        class="collapse-icon-closed"
      >
        <svg
          class="lexicon-icon lexicon-icon-angle-right"
          role="presentation"
        >
          <use
            href="#angle-right"
          />
        </svg>
      </span>
      <span
        class="collapse-icon-open"
      >
        <svg
          class="lexicon-icon lexicon-icon-angle-down"
          role="presentation"
        >
          <use
            href="#angle-down"
          />
        </svg>
      </span>
    </button>
    <div
      aria-labelledby="clay-id-10"
      class="panel-collapse collapse"
      id="clay-id-10"
      role="region"
    >
      <div
        class="panel-body collapsable-option-body"
      >
        <label
          for="keyValueDisplayNameOptionFieldKeyValue"
        >
          display-name
        </label>
        <div
          class="form-group hide"
          data-field-name="OptionFieldKeyValue"
        >
          <label
            aria-labelledby="OptionFieldKeyValue_fieldDetails"
            class="ddm-label"
          >
            text
          </label>
          <div
            class="form-group hide"
            data-field-name="keyValueDisplayNameOptionFieldKeyValue"
          >
            <div
              data-tooltip-align="top"
            >
              <input
                class="form-control ddm-field-text"
                id="keyValueDisplayNameOptionFieldKeyValue"
                name="keyValueDisplayNameOptionFieldKeyValue"
                type="text"
                value=""
              />
            </div>
            <input
              name="keyValueDisplayNameOptionFieldKeyValue_edited"
              type="hidden"
              value="false"
            />
            <div
              class="form-feedback-group field-feedback"
              id="keyValueDisplayNameOptionFieldKeyValue_fieldFeedback"
            >
              <div
                aria-live="assertive"
                class="form-feedback-item"
              />
            </div>
          </div>
          <input
            name="OptionFieldKeyValue_edited"
            type="hidden"
            value="false"
          />
          <div
            class="form-feedback-group field-feedback"
            id="OptionFieldKeyValue_fieldFeedback"
          >
            <div
              aria-live="assertive"
              class="form-feedback-item"
            />
          </div>
          <span
            class="sr-only"
            id="OptionFieldKeyValue_fieldDetails"
          >
            text
          </span>
        </div>
        <label
          class="mt-3"
          for="keyValueReferenceundefined"
        >
          option-reference
        </label>
        <div
          class="form-group hide"
        >
          <label
            aria-labelledby="undefined_fieldDetails"
            class="ddm-label"
          >
            text
          </label>
          <div
            class="form-group hide"
            data-field-name="keyValueReferenceundefined"
          >
            <div
              data-tooltip-align="top"
            >
              <input
                class="form-control ddm-field-text"
                id="keyValueReferenceundefined"
                name="keyValueReferenceundefined"
                type="text"
                value=""
              />
            </div>
            <input
              name="keyValueReferenceundefined_edited"
              type="hidden"
              value="false"
            />
            <div
              class="form-feedback-group field-feedback"
              id="keyValueReferenceundefined_fieldFeedback"
            >
              <div
                aria-live="assertive"
                class="form-feedback-item"
              />
            </div>
          </div>
          <input
            name="undefined_edited"
            type="hidden"
            value="false"
          />
          <div
            class="form-feedback-group field-feedback"
            id="undefined_fieldFeedback"
          >
            <div
              aria-live="assertive"
              class="form-feedback-item"
            />
          </div>
          <span
            class="sr-only"
            id="undefined_fieldDetails"
          >
            text
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`OptionFieldKeyValue renders component with a key 1`] = `
<div>
  <div
    class="panel panel-secondary"
  >
    <button
      aria-controls="clay-id-9"
      aria-expanded="false"
      class="panel-header panel-header-link collapsable-option-header collapse-icon collapse-icon-middle collapsed btn btn-unstyled"
      type="button"
    >
      <span
        class="panel-title"
      >
        Option
      </span>
      <span
        class="collapse-icon-closed"
      >
        <svg
          class="lexicon-icon lexicon-icon-angle-right"
          role="presentation"
        >
          <use
            href="#angle-right"
          />
        </svg>
      </span>
      <span
        class="collapse-icon-open"
      >
        <svg
          class="lexicon-icon lexicon-icon-angle-down"
          role="presentation"
        >
          <use
            href="#angle-down"
          />
        </svg>
      </span>
    </button>
    <div
      aria-labelledby="clay-id-9"
      class="panel-collapse collapse"
      id="clay-id-9"
      role="region"
    >
      <div
        class="panel-body collapsable-option-body"
      >
        <label
          for="keyValueDisplayNameOptionFieldKeyValue"
        >
          display-name
        </label>
        <div
          class="form-group hide"
          data-field-name="OptionFieldKeyValue"
        >
          <div
            class="form-group hide"
            data-field-name="keyValueDisplayNameOptionFieldKeyValue"
          >
            <div
              data-tooltip-align="top"
            >
              <input
                class="form-control ddm-field-text"
                id="keyValueDisplayNameOptionFieldKeyValue"
                name="keyValueDisplayNameOptionFieldKeyValue"
                type="text"
                value=""
              />
            </div>
            <input
              name="keyValueDisplayNameOptionFieldKeyValue_edited"
              type="hidden"
              value="false"
            />
            <div
              class="form-feedback-group field-feedback"
              id="keyValueDisplayNameOptionFieldKeyValue_fieldFeedback"
            >
              <div
                aria-live="assertive"
                class="form-feedback-item"
              />
            </div>
          </div>
          <input
            name="OptionFieldKeyValue_edited"
            type="hidden"
            value="false"
          />
          <div
            class="form-feedback-group field-feedback"
            id="OptionFieldKeyValue_fieldFeedback"
          >
            <div
              aria-live="assertive"
              class="form-feedback-item"
            />
          </div>
        </div>
        <label
          class="mt-3"
          for="keyValueReferenceundefined"
        >
          option-reference
        </label>
        <div
          class="form-group hide"
        >
          <div
            class="form-group hide"
            data-field-name="keyValueReferenceundefined"
          >
            <div
              data-tooltip-align="top"
            >
              <input
                class="form-control ddm-field-text"
                id="keyValueReferenceundefined"
                name="keyValueReferenceundefined"
                type="text"
                value=""
              />
            </div>
            <input
              name="keyValueReferenceundefined_edited"
              type="hidden"
              value="false"
            />
            <div
              class="form-feedback-group field-feedback"
              id="keyValueReferenceundefined_fieldFeedback"
            >
              <div
                aria-live="assertive"
                class="form-feedback-item"
              />
            </div>
          </div>
          <input
            name="undefined_edited"
            type="hidden"
            value="false"
          />
          <div
            class="form-feedback-group field-feedback"
            id="undefined_fieldFeedback"
          >
            <div
              aria-live="assertive"
              class="form-feedback-item"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
